- added simple Vue3 app & changed API, configure CORS, apply authorization;
