# app/controllers/person_contoller.go
@@ -11,5 +11,7 @@ func RegisterPersonHandlers(logger *slog.Logger, router *chi.Mux, storage *repos
 	router.Post("/api/v1/person/create", handlers.CreatePerson(logger, storage))
 	router.Delete("/api/v1/person/delete", handlers.DeletePerson(logger, storage))
 	router.Put("/api/v1/person/update", handlers.UpdatePerson(logger, storage))
-	router.Get("/api/v1/person/get", handlers.FindPerson(logger, storage))
+	router.Get("/api/v1/person/get/id", handlers.FindPersonById(logger, storage))
+	router.Get("/api/v1/persons", handlers.LoadPersons(logger, storage))
+	router.Get("/api/v1/person/get/login", handlers.FindPersonByLogin(logger, storage))
 }
