# app/docs/swagger.json
@@ -84,7 +84,7 @@
                 }
             }
         },
-        "/person/get": {
+        "/person/get/id": {
             "get": {
                 "description": "Find existing persons",
                 "consumes": [
@@ -96,12 +96,47 @@
                 "tags": [
                     "persons"
                 ],
-                "summary": "Find existing persons",
+                "summary": "Find existing persons by id",
                 "parameters": [
                     {
                         "type": "string",
                         "description": "ID of person entity.",
                         "name": "id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/model.PersonResponse"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/person/get/login": {
+            "get": {
+                "description": "Find existing persons",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "persons"
+                ],
+                "summary": "Find existing persons by login",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Login of person entity.",
+                        "name": "login",
                         "in": "query",
                         "required": true
                     }
@@ -141,6 +176,41 @@
                         "schema": {
                             "$ref": "#/definitions/model.PersonRequest"
                         }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/model.PersonResponse"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/persons": {
+            "get": {
+                "description": "Load persons",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "persons"
+                ],
+                "summary": "Load first 50 persons",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Page of person table, when load by 50 rows.",
+                        "name": "page",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
